--- a/CV.html
+++ b/CV.html
@@ -9,8 +9,6 @@
     }
     .poza{
         height: 7cm;
-        widows: 5cm;
-
     }
 </style>
 <body style="background-color: goldenrod">
@@ -25,7 +23,13 @@
     <p>Adresa: <a href="https://ro.wikipedia.org/wiki/Cluj-Napoca">Cluj-Napoca</a></p>
     <p style="font-size: 20px"><a href="Studii.html">Studii</a></p>
     <p style="font-size: 20px"><a href="Experienta.html">Experienta</a></p>
+    <p style="font-size: 20px"><a href="Login.html">Login</a></p>
+    <p style="font-size: 20px"><a href="Contact.html">Contact</a></p>
     <p style="font-size: 35px ">When life shuts a door... Open it again. It's a door. That's how they work.</p>
+    <video width="320" height="240" controls>
+        <source src="movie.ogg" type="video/ogg">
+        Your browser does not support the video tag.
+    </video>
 </div>
 </body>
 </html>
