--- a/Experienta.html
+++ b/Experienta.html
@@ -8,11 +8,9 @@
     }
     .poza{
         height: 7cm;
-        widows: 5cm;
-
     }
 </style>
-<body style="background-color: indianred" ">
+<body style="background-color: indianred">
 <h1 class="alb">Curriculum Vitae- ANDREI SILION</h1>
 <img class="poza" src="cvbuna.jpg" alt="un fraier">
 <div>
