--- a/Contact.html
+++ b/Contact.html
@@ -1,19 +1,9 @@
 <!DOCTYPE html>
 <head>
     <title>Contact</title>
+    <link href="style.css" rel="stylesheet" />
 </head>
-<style>
-    .alb{
-        background-color: white;
-    }
-    .poza{
-        height: 7cm;
-    }
-    .no-repeat{
-        background-repeat: no-repeat;
-        background-size: 2000px 1000px;
-    }
-</style>
+
 <body class="no-repeat" style="background-image: linear-gradient(45deg,coral,black)">
 <h1 class="alb">Curriculum Vitae- ANDREI SILION</h1>
 <img class="poza" src="cvbuna.jpg" alt="un fraier">
