--- a/Experienta.html
+++ b/Experienta.html
@@ -1,15 +1,8 @@
 <!DOCTYPE html>
 <head>
     <title>Experienta</title>
+    <link href="style.css" rel="stylesheet" />
 </head>
-<style>
-    .alb{
-        background-color: white;
-    }
-    .poza{
-        height: 7cm;
-    }
-</style>
 <body style="background-color: indianred">
 <h1 class="alb">Curriculum Vitae- ANDREI SILION</h1>
 <img class="poza" src="cvbuna.jpg" alt="un fraier">
