--- a/Studii.html
+++ b/Studii.html
@@ -2,15 +2,9 @@
 <html>
 <head>
     <title>Studii</title>
+    <link href="style.css" rel="stylesheet" />
 </head>
-<style>
-    .alb{
-        background-color: white;
-    }
-    .poza{
-        height: 7cm;
-    }
-</style>
+
 <body style="background-color: peachpuff">
 <h1 class="alb">Curriculum Vitae- ANDREI SILION</h1>
 <img class="poza" src="cvbuna.jpg" alt="un fraier">
