--- a/CV.html
+++ b/CV.html
@@ -2,15 +2,9 @@
 <html>
 <head>
     <title>CV-Andrei Silion</title>
+    <link href="style.css" rel="stylesheet" />
 </head>
-<style>
-    .alb{
-        background-color: white;
-    }
-    .poza{
-        height: 7cm;
-    }
-</style>
+
 <body style="background-color: goldenrod">
     <h1 class="alb">Curriculum Vitae- ANDREI SILION</h1>
     <img class="poza" src="cvbuna.jpg" alt="un fraier">
