--- a/Login.html
+++ b/Login.html
@@ -1,16 +1,8 @@
 <!DOCTYPE html>
 <head>
     <title>Login</title>
+    <link href="style.css" rel="stylesheet" />
 </head>
-<style>
-    .alb{
-        background-color: white;
-    }
-    .poza{
-        height: 7cm;
-    }
-
-</style>
 <body style="background-color: lavender">
     <h1 class="alb">Curriculum Vitae- ANDREI SILION</h1>
     <img class="poza" src="cvbuna.jpg" alt="un fraier">
